--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.body{
+  background-color: black;
+}
+
 .App {
   text-align: center;
 }
@@ -21,11 +25,11 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .App-link {
-  color: #0792b8;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
