--- a/src/pages/Auctions.css
+++ b/src/pages/Auctions.css
@@ -26,8 +26,8 @@ h1{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
-  max-width: 1200px;
-  width: 100%;
+  max-width: auto;
+  width: 50%;
 }
 
 .category-tile {
