Added Logo on NavBar

--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -21,6 +21,11 @@
   cursor: pointer;
 }
 
+.navbar-logo-image {
+  width: 25px; /* Adjust the size of the image */
+  height: auto;
+}
+
 .menu-toggle {
   display: none;
   font-size: 1.5rem;
