--- a/src/pages/AuctionFormPage.css
+++ b/src/pages/AuctionFormPage.css
@@ -1,7 +1,7 @@
 /* General Layout */
 .auction-form-page {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 200px auto;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 8px;
@@ -13,6 +13,7 @@
   font-weight: 600;
   text-align: center;
   margin-bottom: 20px;
+  columns: black;
 }
 
 form {
