--- a/src/pages/AuctionItem.css
+++ b/src/pages/AuctionItem.css
@@ -16,7 +16,7 @@ h1 {
   
   .auction-item-details {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 30px;
     margin-top: 20px;
   }
@@ -26,8 +26,7 @@ h1 {
   }
   
   .auction-item-img {
-    width: 100%;
-    height: 300px;
+    width: 300px;
     object-fit: cover;
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
@@ -39,6 +38,7 @@ h1 {
     background-color: #f0f0f0;
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 1000px;
   }
   
   .auction-item-info h2 {
@@ -88,6 +88,7 @@ h1 {
     background-color: #f7f7f7;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    min-width: 600px;
   }
   
   .leaderboard h3 {
