--- a/src/pages/Auctions.css
+++ b/src/pages/Auctions.css
@@ -1,69 +1,66 @@
-h1{
-  color: #f0f0f0;
-  padding-top: 50px;
-}
-
+/* Auctions.css */
 .home-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 150px;
   text-align: center;
-  padding: 0px 20px;
-  background-color: #001219;
-  min-height: 100vh;  /* Ensures the container takes up at least the full viewport height */
-  -ms-overflow-style: none;
+  font-family: Arial, sans-serif;
+  color: #fff;
 }
 
-@media (max-width: 768px) {
-  .home-container {
-    min-height: calc(100vh - 60px); /* Handle smaller screens by ensuring it's full screen minus navbar */
-  }
+h1 {
+  font-size: 28px;
+  color: #fff;
+  margin-bottom: 20px;
 }
 
 .category-grid {
-  margin: 20px 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 30px;
-  max-width: auto;
-  width: 50%;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .category-tile {
-  color: #001219;
-  border: solid 1px grey;
-  background-color: #f0f0f0;
-  border-radius: 8px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  background: #1e1e1e;
+  border: 1px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   overflow: hidden;
-  transition: transform 0.5s ease-in-out;
-  min-height: 400px;
+  cursor: pointer;
+  transition: transform 0.3s, box-shadow 0.3s;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
 }
 
 .category-tile:hover {
-  transform: scale(1.05);
-  box-shadow: 0px 4px 15px rgba(255, 0, 0, 1);
+  transform: translateY(-5px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
 }
 
 .category-img {
   width: 100%;
   height: 200px;
   object-fit: cover;
-  border-bottom: solid 1px grey;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .category-content {
-  padding: 20px;
+  padding: 15px;
 }
 
 .category-title {
-  font-size: 24px;
+  font-size: 18px;
+  font-weight: bold;
   margin-bottom: 10px;
+  color: #fff;
 }
 
 .category-description {
-  font-size: 16px;
-  color: #555;
+  font-size: 14px;
+  color: #ccc;
+  line-height: 1.5;
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  white-space: nowrap;
 }
