--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,11 +19,14 @@
   font-weight: bold;
   color: #fff;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .navbar-logo-image {
   width: 25px; /* Adjust the size of the image */
   height: auto;
+  margin-right: 10px;
 }
 
 .menu-toggle {
@@ -51,24 +54,10 @@
   text-decoration: none;
   font-size: 1rem;
   color: #fff;
-  padding: 10px 15px;
+  padding: 12px 15px;
   display: block;
-  overflow: hidden;
-  position: relative;
   transition: color 0.3s ease;
-}
-
-.navbar-links a::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: #007aff;
-  transition: transform 0.3s ease;
-  transform: translateX(-100%);
-  z-index: -1;
+  position: relative;
 }
 
 .navbar-links a:hover::before {
@@ -77,6 +66,66 @@
 
 .navbar-links a:hover {
   color: #ba0d0d;
+}
+
+/* Notification Bell and Tile */
+.notification-box {
+  position: relative;
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.notification-icon {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: white;
+  font-size: 24px;
+}
+
+.notification-badge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 5px 10px;
+  font-size: 14px;
+}
+
+.notification-tile {
+  position: fixed;  /* Fix the tile in position so it doesn't affect the navbar */
+  top: 60px;  /* Adjust based on your navbar height */
+  right: 0;  /* Position the tile at the leftmost part */
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  max-height: 350px;
+  overflow-y: auto;
+  z-index: 1000;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.notification-item {
+  padding: 8px;
+  border-bottom: 1px solid #eee;
+}
+
+.notification-item:last-child {
+  border-bottom: none;
+}
+
+.notification-item p {
+  margin: 0;
+  font-size: 14px;
+  color: #333;
+}
+
+.notification-item:hover {
+  background-color: #f5f5f5;
 }
 
 /* Responsive Design */
